--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -16,6 +16,8 @@ borsh = { git = "https://github.com/near/borsh-rs", branch = "master" }
 
 [patch.crates-io]
 ### parity-secp256k1 = {git = "https://github.com/paritytech/rust-secp256k1"}
+### near-vm-logic = { git = "https://github.com/near/nearcore", branch = "master" }
+### near-primitives-core = { git = "https://github.com/near/nearcore", branch = "master" }
 
 [profile.release]
 codegen-units = 1
